kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apollo-frontend
  name: apollo-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: apollo-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: apollo-frontend
    spec:
      containers:
      - image: kcbabo/apollo-client:1.0
        name: frontend
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: apollo-frontend
  namespace: default
  labels:
    service: apollo-frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: apollo-frontend
